--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -208,18 +208,21 @@ exec --no-startup-id firefox
 exec --no-startup-id Gnome-terminal
 exec --no-startup-id discord
 exec --no-startup-id spotify
+exec --no-startup-id gimp
 
 #assign them to workstations
 assign [class="firefox"] 1
 assign [class="Gnome-terminal"] 2
 assign [class="discord"] 3
 assign [class="Spotify"] 4
+assign [class="Gimp"] 5
 
 #assign discord and spotify to my second monitor
 workspace 1 output DP-4
 workspace 2 output DP-4
 workspace 3 output DP-2
 workspace 4 output DP-2
+workspace 5 output DP-2
 
 # set wallpaper
 exec_always feh --bg-scale /usr/share/backgrounds/ubuntu-default-greyscale-wallpaper.png
