--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,7 @@
+set-option -g focus-events on
 set -ga terminal-overrides ",screen-256color*:Tc"
 set-option -g default-terminal "screen-256color"
+set-option -a terminal-features '256:RGB'
 set -s escape-time 0
 
 unbind C-b
@@ -27,7 +29,7 @@ bind -r l select-pane -R
 # bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 #
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
-# bind-key -r G run-shell "~/.local/bin/tmux-sessionizer ~/work/nrdp"
+bind-key -r G run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
 # bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/work/tvui"
 # bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/work/milo"
 # # bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/work/hpack"
