Modified tmux zshrc copilot i3 tmux-script look at the files for dotfiles changes

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -189,9 +189,9 @@ bar {
         status_command i3status
 }
 
-# DP-4 is main monitor, DP-2 is second monitor
+# DP-4 is main monitor, DP-0 is second monitor
 bindsym $mod+m move workspace to output DP-4
-bindsym $mod+n move workspace to output DP-2
+bindsym $mod+n move workspace to output DP-0
 
 #merge xrdb with cursor settings 
 exec_always --no-startup-id xrdb merge ~./Xresources
@@ -202,6 +202,7 @@ for_window [class="^.*"] border pixel 0
 for_window [class="^.*"] client.focused          #77dd77 #285577 #ffffff #2e9ef4   #285577
 
 # bind applications to their workstations upon startup
+bindsym $mod+Shift+s exec --no-startup-id gnome-screenshot -a
 
 # Start all my applications that I want upon startup
 exec --no-startup-id firefox
@@ -218,10 +219,10 @@ assign [class="Spotify"] 4
 assign [class="Gimp"] 5
 
 #assign discord and spotify to my second monitor
-workspace 1 output DP-4
-workspace 2 output DP-4
-workspace 3 output DP-2
-workspace 4 output DP-2
+workspace 1 output DP-2
+workspace 2 output DP-2
+workspace 3 output DP-4
+workspace 4 output DP-0
 workspace 5 output DP-2
 
 # set wallpaper
