--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,10 +27,11 @@ bind u kill-window
 # bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
 #
 # # forget the find window.  That is for chumps
-# bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+bind-key -r H run-shell "~/.local/scripts/tmux-windowizer"
 #
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
-bind-key -r G run-shell "~/.local/bin/tmux-sessionizer ~/.dotfiles"
+bind-key -r G run-shell "~/.local/scripts/tmux-sessionizer ~/.dotfiles"
 # bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/work/tvui"
 # bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/work/milo"
 # # bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/work/hpack"
