--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,8 +9,18 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
+# install plugins
+set -g @plugin 'catppuccin/tmux#latest'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+
 bind r source-file ~/.tmux.conf
 set -g base-index 1
+set -g renumber-windows on
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -39,4 +49,6 @@ bind-key -r G run-shell "~/.local/scripts/tmux-sessionizer ~/.dotfiles"
 # bind-key -r T run-shell "~/.local/bin/tmux-sessionizer ~/personal/refactoring.nvim"
 # bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/personal/harpoon"
 # bind-key -r S run-shell "~/.local/bin/tmux-sessionizer ~/personal/developer-productivity"
-#
+
+# plugins 
+run '~/.tmux/plugins/tpm/tpm'
