--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,9 +8,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
+set -g mouse on
 
 # install plugins
-set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
