Made various config changes
* fixed small i3 bugs
* changed theme back to rose pine
* added conform to my list of plugins for neovim
* added/removed some lazy plugins
* fixed some zshrc lines

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -206,7 +206,7 @@ bindsym $mod+Shift+s exec --no-startup-id gnome-screenshot -a
 
 # Start all my applications that I want upon startup
 exec --no-startup-id firefox
-exec --no-startup-id Gnome-terminal
+exec --no-startup-id gnome-terminal
 exec --no-startup-id discord
 exec --no-startup-id spotify
 exec --no-startup-id gimp
