--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -202,7 +202,8 @@ for_window [class="^.*"] border pixel 0
 for_window [class="^.*"] client.focused          #77dd77 #285577 #ffffff #2e9ef4   #285577
 
 # bind applications to their workstations upon startup
-bindsym $mod+Shift+s exec --no-startup-id gnome-screenshot -a
+bindsym $mod+Shift+s exec --no-startup-id flameshot gui
+# bindsym $mod+Shift+s exec --no-startup-id notify-send "Hotkey works"
 
 # Start all my applications that I want upon startup
 exec --no-startup-id firefox
