--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,24 @@ set -s escape-time 0
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-justify centre
+set-option -g status-keys vi
+set-option -g status-position bottom
+set -g status-style 'bg=#333335 fg=#5eacd3'
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-left "#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r)#[default]"
+set-option -g status-right-length 140
+set-option -g status-right-style default
+set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) "
+set-option -ag status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
+set-option -ag status-right " #[fg=white,bg=default]%a %H:%M:%S #[default] #[fg=blue]%m-%e-%Y"
+set-window-option -g window-status-style fg=colour244
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-current-style fg=colour166
+set-window-option -g window-status-current-style bg=default
 set -g mouse on
 
 # install plugins
@@ -16,7 +33,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
