--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ set-option -g status-right-length 140
 set-option -g status-right-style default
 set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) "
 set-option -ag status-right "#[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d ' ' | cut -f 1 -d ',') "
-set-option -ag status-right " #[fg=white,bg=default]%a %H:%M:%S #[default] #[fg=blue]%m-%e-%Y"
+set-option -ag status-right " #[fg=white,bg=default]%a %H:%M:%S #[default] #[fg=yellow]%m-%d-%Y"
 set-window-option -g window-status-style fg=colour244
 set-window-option -g window-status-style bg=default
 set-window-option -g window-status-current-style fg=colour166
@@ -33,6 +33,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
@@ -67,5 +68,5 @@ bind-key -r G run-shell "~/.local/scripts/tmux-sessionizer ~/.dotfiles"
 # bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/personal/harpoon"
 # bind-key -r S run-shell "~/.local/bin/tmux-sessionizer ~/personal/developer-productivity"
 
-# plugins 
+# plugins
 run '~/.tmux/plugins/tpm/tpm'
