--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,6 +55,7 @@ bind u kill-window
 # bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
 #
 # # forget the find window.  That is for chumps
+bind-key -r g display-popup -E -d "#{pane_current_path}" -xC -yC -w 80% -h 80% lazygit
 bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 bind-key -r H run-shell "~/.local/scripts/tmux-windowizer"
 #
