Added popup for todo file and nvim in .dotfiles
added popup for todo file and nvim in .dotfiles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,14 +52,15 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 bind u kill-window
-# bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
+bind -r D display-popup -E -d "#{pane_current_path}" -xC -yC -w 80% -h 80% "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
 #
 # # forget the find window.  That is for chumps
 bind-key -r g display-popup -E -d "#{pane_current_path}" -xC -yC -w 80% -h 80% lazygit
+bind-key -r l display-popup -E -xC -yC -w 80% -h 80% "nvim ~/.dotfiles"
 bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 bind-key -r H run-shell "~/.local/scripts/tmux-windowizer"
 #
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
+bind-key -r i display-popup -E -xC -yC -w 80% -h 80% "tmux-cht.sh"
 bind-key -r G run-shell "~/.local/scripts/tmux-sessionizer ~/.dotfiles"
 # bind-key -r C run-shell "~/.local/bin/tmux-sessionizer ~/work/tvui"
 # bind-key -r R run-shell "~/.local/bin/tmux-sessionizer ~/work/milo"
