Reconfigured hypr,kitty,waybar

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -37,6 +37,8 @@ monitor=DP-3,1920x1080@144.00,2560x-150,1
 $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun
+$screenshot_copy = grim -g "$(slurp)" - | wl-copy
+$screenshot_save = grim -g "$(slurp)" ~/Pictures/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png
 
 
 #################
@@ -242,6 +244,10 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, s, exec, $screenshot_copy
+bind = $mainMod SHIFT, s, exec, $screenshot_save
+bind = $mainMod SHIFT, n, movecurrentworkspacetomonitor, DP-2
+bind = $mainMod, n, movecurrentworkspacetomonitor, DP-3
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
