--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,9 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # BEGIN_KITTY_FONTS
-font_family      family="Cousine Nerd Font Mono"
+font_family Cousine Nerd Font Mono
+# font_family Noto Color Emoji
+symbol_map U+2600-U+26FF,U+1F300-U+1F5FF Noto Color Emoji
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -1358,6 +1360,8 @@ font_size 16.0
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
+dynamic_background_opacity yes
+background_opacity 0.9
 # background_blur 0
 
 #: Set to a positive value to enable background blur (blurring of the
