--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # BEGIN_KITTY_FONTS
-font_family Cousine Nerd Font Mono
-# font_family Noto Color Emoji
-symbol_map U+2600-U+26FF,U+1F300-U+1F5FF Noto Color Emoji
+font_family      family="Cousine Nerd Font Mono"
+symbol_map U+2600-U+26FF Noto Color Emoji
+symbol_map U+1F000-U+1FAFF Noto Color Emoji
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
